ユーザー編集ページで自己紹介情報を編集できるようにする

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,7 @@ ja:
     attributes:
       user:
         nickname: ニックネーム
+        remark: 自己紹介
         email: Eメール
         password: パスワード
       place:
