--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,10 +7,13 @@ ja:
         email: Eメール
         password: パスワード
         dance_level_id: ダンス歴
+        image: ユーザーアイコン画像
       place:
         name: 名前
         address: 住所
         price: 金額
+        image: 画像
+        url: URL
       message:
         text: テキスト
     errors:
@@ -138,7 +141,7 @@ ja:
       not_a_number: は数値で入力してください
       not_an_integer: は整数で入力してください
       odd: は奇数にしてください
-      other_than: は%{count}以外の値にしてください
+      other_than: は【ダンス歴未設定】以外の値にしてください
       present: は入力しないでください
       required: を入力してください
       taken: はすでに存在します
